Added connection with db through sequelize ORM

--- a/ensolvers-api/package.json
+++ b/ensolvers-api/package.json
@@ -5,12 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:reload": "nodemon server.js"
+    "start:reload": "nodemon src/server.js"
   },
   "author": "Facundo Hernán Rodríguez",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5"
   }
 }
